--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,6 +2,12 @@ pipeline {
     agent any
 
     stages {
+        environment {
+        GIT_CREDENTIALS_ID = 'my-credentials'
+        JAVA_HOME = '/usr/lib/jvm/java-17-openjdk-amd64/bin/java'  // Replace with your actual JAVA_HOME path
+        PATH = "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin"  // Prepend JAVA_HOME/bin to PATH
+    }
+
         stage('Checkout') {
             steps {
                 // Checkout the code from the repository
