--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,6 @@
 pipeline {
-    agent anyenvironment {
+    agent any
+    environment {
         JAVA_HOME = '/usr/lib/jvm/java-17-openjdk-amd64'
         PATH = "${JAVA_HOME}/bin:${env.PATH}"
     }
